tests/baselines/reference/fallFromLastCase2(strict=true).errors.txt
fallFromLastCase2.ts(1,18): error TS7010: 'use', which lacks return-type annotation, implicitly has an 'any' return type.
fallFromLastCase2.ts(8,9): error TS7029: Fallthrough case in switch.
fallFromLastCase2.ts(21,9): error TS7029: Fallthrough case in switch.


==== fallFromLastCase2.ts (3 errors) ====
    declare function use(a: string);
                     ~~~
!!! error TS7010: 'use', which lacks return-type annotation, implicitly has an 'any' return type.
    
    function foo1(a: number) {
        switch (a) {
            case 1:
                use("1");
                break;
            case 2:
            ~~~~~~~
!!! error TS7029: Fallthrough case in switch.
                use("2");
            case 3:
                use("3");
        }
    }
    
    
    function foo2(a: number) {
        switch (a) {
            case 1:
                use("1");
                break;
            default:
            ~~~~~~~~
!!! error TS7029: Fallthrough case in switch.
                use("2");
            case 2:
                use("3");
        }
    }